# crypto-stock-monitor

./: README.md  main.py  pyproject.toml
app/: __init__.py
app/api/endpoints/: assets.py
app/core/: config.py  database.py
app/models/: asset.py
app/schemas/: asset.py
app/services/: scheduler.py
